--- a/SerilogDemo/appsettings.json
+++ b/SerilogDemo/appsettings.json
@@ -22,7 +22,7 @@
     ],
     "Enrich": [ "FromLogContext" ],
     "Properties": {
-      "Application": "MyApp"
+      "Application": "WeatherForecast"
     }
   }
 }
